--- a/composer.json
+++ b/composer.json
@@ -15,5 +15,8 @@
     "require-dev": {
         "phpunit/phpunit": "^10.5",
         "mockery/mockery": "^1.6"
+    },
+    "require": {
+        "ramsey/uuid": "^4.7"
     }
 }
